--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
+    <style>
+        body{
+            background-image: url(banner.png);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100%;
+        }
+    </style>
 </head>
 <body >
 
@@ -12,9 +20,9 @@
 <center>
     <div  class="game-container"  >
 
-        <h1 style="color: aqua;">Number Guessing Game!</h1>
+        <h1 style="color: rgb(76, 0, 255);">Number Guessing Game!</h1>
 
-        <p style="color: brown;">Guess a number between 1 and 10</p>
+        <p style="color: rgb(56, 6, 20);">Guess a number between 1 and 10</p>
 
         <input type="text" id="guess"  min="1" max="10">
 
@@ -24,6 +32,7 @@
    
     </div>
 </center>
+
 
 
 
